--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
     "@react-google-maps/api": "^2.19.2",
+    "dotenv": "^16.3.1",
     "next": "^14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
